# anime-watchlist

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: BGM-API.md  DEV.md  TECH.md
docs/BGM-API/: config.json  package.json
docs/BGM-API/docs-raw/: user agent.md
scripts/: build-frontend.mjs  release.mjs
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BangumiLink.tsx  CollectAction.tsx  SubjectDetail.tsx  SubjectRow.tsx  WatchlistToolbar.tsx
src/components/layout/: ThemeToggle.tsx  TitleBar.tsx
src/hooks/: useAuthUser.ts
src/lib/: auth.ts  bgm.ts  proxy.ts  queries.ts  store.ts  utils.ts
src/pages/: About.tsx  Collection.tsx  Config.tsx  Watchlist.tsx
src/types/: bgm.ts
